--- a/create.html
+++ b/create.html
@@ -7,6 +7,7 @@
     <script src="create.js"> href="create.css"</script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="create.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
@@ -14,7 +15,7 @@
     <h1>Interactive Periodic Table</h1>
     <form>
         <p>
-            <button type="button" class="buttonNm" onclick="elementAlert('H')">H</button>
+            <button type="button" id = 'output' class="buttonNm" onclick="elementAlert('H')">H</button>
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
