--- a/create.html
+++ b/create.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Create Project</title>
-    <script src="create.js"> href="create.css"</script>
+    <script src="create.js">
+        href = "create.css"
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="create.css">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
@@ -12,10 +14,10 @@
 </head>
 
 <body>
-    <h1>Interactive Periodic Table</h1>
+    <h1 id="h1">Interactive Periodic Table</h1>
     <form>
         <p>
-            <button type="button" id = 'output' class="buttonNm" onclick="elementAlert('H')">H</button>
+            <button type="button" id='output' class="buttonNm" onclick="elementAlert('H')">H</button>
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
@@ -156,6 +158,7 @@
         </p>
         </br>
         <p>
+            <button type="button" class="invisibleButton2">Lanthanides:</button>
             <button type="button" class="buttonL" onclick="elementAlert('La')">La</button>
             <button type="button" class="buttonL" onclick="elementAlert('Ce')">Ce</button>
             <button type="button" class="buttonL" onclick="elementAlert('Pr')">Pr</button>
@@ -172,7 +175,8 @@
             <button type="button" class="buttonL" onclick="elementAlert('Yb')">Yb</button>
             <button type="button" class="buttonL" onclick="elementAlert('Lu')">Lu</button>
         </p>
-    <p>
+        <p>
+            <button type="button" class="invisibleButton2">Actinides:</button>
             <button type="button" class="buttonA" onclick="elementAlert('Ac')">Ac</button>
             <button type="button" class="buttonA" onclick="elementAlert('Th')">Th</button>
             <button type="button" class="buttonA" onclick="elementAlert('Pa')">Pa</button>
