--- a/create.html
+++ b/create.html
@@ -17,7 +17,7 @@
     <h1 id="h1">Interactive Periodic Table</h1>
     <form>
         <p>
-            <button type="button" id='output' class="buttonNm" onclick="elementAlert(H)">H</button>
+            <button type="button" id="output" class="buttonNm" onclick="elementAlert(H)">H</button>
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
@@ -156,7 +156,7 @@
             <button type="button" class="buttonH" onclick="elementAlert(Uus)">Uus</button>
             <button type="button" class="buttonNg" onclick="elementAlert(Uuo)">Uuo</button>
         </p>
-        </br>
+        <br>
         <p>
             <button type="button" class="invisibleButton2">Lanthanides:</button>
             <button type="button" class="buttonL" onclick="elementAlert(La)">La</button>
@@ -193,3 +193,4 @@
             <button type="button" class="buttonA" onclick="elementAlert(No)">No</button>
             <button type="button" class="buttonA" onclick="elementAlert(Lr)">Lr</button>
         </p>
+</body>
