--- a/create.html
+++ b/create.html
@@ -193,6 +193,7 @@
             <button type="button" class="buttonA" onclick="elementAlert(No)">No</button>
             <button type="button" class="buttonA" onclick="elementAlert(Lr)">Lr</button>
         </p>
+    </form>
         <div id="output" class="elemInfo"></div>
 </body>
 
