--- a/create.html
+++ b/create.html
@@ -194,7 +194,7 @@
             <button type="button" class="buttonA" onclick="elementAlert(Lr)">Lr</button>
         </p>
     </form>
-        <div id="output" class="elemInfo"></div>
+    <div id="output" class="alert alert-info">Click on an element to see its details.</div>
 </body>
 
 </html>
