--- a/create.html
+++ b/create.html
@@ -151,10 +151,10 @@
             <button type="button" class="buttonTm" onclick="elementAlert(Cn)">Cn</button>
             <button type="button" class="buttonBm" onclick="elementAlert(Uut)">Uut</button>
             <button type="button" class="buttonBm" onclick="elementAlert(Fl)">Fl</button>
-            <button type="button" class="buttonBm" onclick="elementAlert(Uup)">Uup</button>
+            <button type="button" class="buttonBm" onclick="elementAlert(Mc)">Mc</button>
             <button type="button" class="buttonBm" onclick="elementAlert(Lv)">Lv</button>
-            <button type="button" class="buttonH" onclick="elementAlert(Uus)">Uus</button>
-            <button type="button" class="buttonNg" onclick="elementAlert(Uuo)">Uuo</button>
+            <button type="button" class="buttonH" onclick="elementAlert(Ts)">Ts</button>
+            <button type="button" class="buttonNg" onclick="elementAlert(Og)">Og</button>
         </p>
         <br>
         <p>
