all links should be working now

--- a/create.html
+++ b/create.html
@@ -149,7 +149,7 @@
             <button type="button" class="buttonTm" onclick="elementAlert(Ds)">Ds</button>
             <button type="button" class="buttonTm" onclick="elementAlert(Rg)">Rg</button>
             <button type="button" class="buttonTm" onclick="elementAlert(Cn)">Cn</button>
-            <button type="button" class="buttonBm" onclick="elementAlert(Uut)">Uut</button>
+            <button type="button" class="buttonBm" onclick="elementAlert(Nh)">Nh</button>
             <button type="button" class="buttonBm" onclick="elementAlert(Fl)">Fl</button>
             <button type="button" class="buttonBm" onclick="elementAlert(Mc)">Mc</button>
             <button type="button" class="buttonBm" onclick="elementAlert(Lv)">Lv</button>
