--- a/create.html
+++ b/create.html
@@ -193,6 +193,19 @@
             <button type="button" class="buttonA" onclick="elementAlert(No)">No</button>
             <button type="button" class="buttonA" onclick="elementAlert(Lr)">Lr</button>
         </p>
+        <br>
+        <p>
+            <button type="button" class="buttonAm2">Alkali Metal</button>
+            <button type="button" class="buttonAe2">Alkaline Earth</button>
+            <button type="button" class="buttonTm2">Transition Metal</button>
+            <button type="button" class="buttonBm2">Basic Metal</button>
+            <button type="button" class="buttonSm2">Semimetal</button>
+            <button type="button" class="buttonNm2">Nonmetal</button>
+            <button type="button" class="buttonH2">Halogen</button>
+            <button type="button" class="buttonNg2">Noble Gas</button>
+            <button type="button" class="buttonL2">Lanthanide</button>
+            <button type="button" class="buttonA2">Actinide</button>
+        </p>
     </form>
     <div id="output" class="alert alert-info">Click on an element to see its details.</div>
 </body>
