--- a/create.html
+++ b/create.html
@@ -55,6 +55,8 @@
             <button type="button" class="buttonNm" onclick="elementAlert(O)">O</button>
             <button type="button" class="buttonH" onclick="elementAlert(F)">F</button>
             <button type="button" class="buttonNg" onclick="elementAlert(Ne)">Ne</button>
+            <button type="button" class="invisibleButton3"></button>
+            <button type="button" class="invisibleButton4">Key:</button>
         </p>
         <p>
             <button type="button" class="buttonAm" onclick="elementAlert(Na)">Na</button>
@@ -75,6 +77,12 @@
             <button type="button" class="buttonNm" onclick="elementAlert(O)">O</button>
             <button type="button" class="buttonH" onclick="elementAlert(F)">F</button>
             <button type="button" class="buttonNg" onclick="elementAlert(Ne)">Ne</button>
+            <button type="button" class="invisibleButton3"></button>
+            <button type="button" class="buttonAm2"></button>
+            <button type="button" class="invisibleButton2">Alkali Metal</button>
+            <button type="button" class="buttonNm2"></button>
+            <button type="button" class="invisibleButton2">Nonmetal</button>
+
         </p>
         <p>
             <button type="button" class="buttonAm" onclick="elementAlert(K)">K</button>
@@ -95,6 +103,11 @@
             <button type="button" class="buttonNm" onclick="elementAlert(Se)">Se</button>
             <button type="button" class="buttonH" onclick="elementAlert(Br)">Br</button>
             <button type="button" class="buttonNg" onclick="elementAlert(Kr)">Kr</button>
+            <button type="button" class="invisibleButton3"></button>
+            <button type="button" class="buttonAe2"></button>
+            <button type="button" class="invisibleButton2">Alkaline Earth</button>
+            <button type="button" class="buttonH2"></button>
+            <button type="button" class="invisibleButton2">Halogen</button>
         </p>
         <p>
             <button type="button" class="buttonAm" onclick="elementAlert(Rb)">Rb</button>
@@ -115,6 +128,11 @@
             <button type="button" class="buttonSm" onclick="elementAlert(Te)">Te</button>
             <button type="button" class="buttonH" onclick="elementAlert(I)">I</button>
             <button type="button" class="buttonNg" onclick="elementAlert(Xe)">Xe</button>
+            <button type="button" class="invisibleButton3"></button>
+            <button type="button" class="buttonTm2"></button>
+            <button type="button" class="invisibleButton2">Transition Metal</button>
+            <button type="button" class="buttonNg2"></button>
+            <button type="button" class="invisibleButton2">Noble Gas</button>
         </p>
         <p>
             <button type="button" class="buttonAm" onclick="elementAlert(Cs)">Cs</button>
@@ -135,6 +153,11 @@
             <button type="button" class="buttonSm" onclick="elementAlert(Po)">Po</button>
             <button type="button" class="buttonH" onclick="elementAlert(At)">At</button>
             <button type="button" class="buttonNg" onclick="elementAlert(Rn)">Rn</button>
+            <button type="button" class="invisibleButton3"></button>
+            <button type="button" class="buttonBm2"></button>
+            <button type="button" class="invisibleButton2">Basic Metal</button>
+            <button type="button" class="buttonL2"></button>
+            <button type="button" class="invisibleButton2">Lanthanide</button>
         </p>
         <p>
             <button type="button" class="buttonAm" onclick="elementAlert(Fr)">Fr</button>
@@ -155,10 +178,15 @@
             <button type="button" class="buttonBm" onclick="elementAlert(Lv)">Lv</button>
             <button type="button" class="buttonH" onclick="elementAlert(Ts)">Ts</button>
             <button type="button" class="buttonNg" onclick="elementAlert(Og)">Og</button>
+            <button type="button" class="invisibleButton3"></button>
+            <button type="button" class="buttonSm2"></button>
+            <button type="button" class="invisibleButton2">Semimetal</button>
+            <button type="button" class="buttonA2"></button>
+            <button type="button" class="invisibleButton2">Actinide</button>
         </p>
         <br>
         <p>
-            <button type="button" class="invisibleButton2">Lanthanides:</button>
+            <button type="button" class="invisibleButton"></button>
             <button type="button" class="buttonL" onclick="elementAlert(La)">La</button>
             <button type="button" class="buttonL" onclick="elementAlert(Ce)">Ce</button>
             <button type="button" class="buttonL" onclick="elementAlert(Pr)">Pr</button>
@@ -176,7 +204,7 @@
             <button type="button" class="buttonL" onclick="elementAlert(Lu)">Lu</button>
         </p>
         <p>
-            <button type="button" class="invisibleButton2">Actinides:</button>
+            <button type="button" class="invisibleButton"></button>
             <button type="button" class="buttonA" onclick="elementAlert(Ac)">Ac</button>
             <button type="button" class="buttonA" onclick="elementAlert(Th)">Th</button>
             <button type="button" class="buttonA" onclick="elementAlert(Pa)">Pa</button>
@@ -194,18 +222,6 @@
             <button type="button" class="buttonA" onclick="elementAlert(Lr)">Lr</button>
         </p>
         <br>
-        <p>
-            <button type="button" class="buttonAm2">Alkali Metal</button>
-            <button type="button" class="buttonAe2">Alkaline Earth</button>
-            <button type="button" class="buttonTm2">Transition Metal</button>
-            <button type="button" class="buttonBm2">Basic Metal</button>
-            <button type="button" class="buttonSm2">Semimetal</button>
-            <button type="button" class="buttonNm2">Nonmetal</button>
-            <button type="button" class="buttonH2">Halogen</button>
-            <button type="button" class="buttonNg2">Noble Gas</button>
-            <button type="button" class="buttonL2">Lanthanide</button>
-            <button type="button" class="buttonA2">Actinide</button>
-        </p>
     </form>
     <div id="output" class="alert alert-info">Click on an element to see its details.</div>
 </body>
