--- a/create.html
+++ b/create.html
@@ -71,12 +71,12 @@
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
             <button type="button" class="invisibleButton"></button>
-            <button type="button" class="buttonBm" onclick="elementAlert(B)">B</button>
-            <button type="button" class="buttonSm" onclick="elementAlert(Cl)">Cl</button>
-            <button type="button" class="buttonNm" onclick="elementAlert(N)">N</button>
-            <button type="button" class="buttonNm" onclick="elementAlert(O)">O</button>
-            <button type="button" class="buttonH" onclick="elementAlert(F)">F</button>
-            <button type="button" class="buttonNg" onclick="elementAlert(Ne)">Ne</button>
+            <button type="button" class="buttonBm" onclick="elementAlert(Al)">Al</button>
+            <button type="button" class="buttonSm" onclick="elementAlert(Si)">Si</button>
+            <button type="button" class="buttonNm" onclick="elementAlert(P)">P</button>
+            <button type="button" class="buttonNm" onclick="elementAlert(S)">S</button>
+            <button type="button" class="buttonH" onclick="elementAlert(Cl)">Cl</button>
+            <button type="button" class="buttonNg" onclick="elementAlert(Ar)">Ar</button>
             <button type="button" class="invisibleButton3"></button>
             <button type="button" class="buttonAm2"></button>
             <button type="button" class="invisibleButton2">Alkali Metal</button>
